tests/test_data/CodeStructureSnippets/bad/sem_err_3.6.ifj21
require "ifj21"
function concat (x : string, y : string) : integer, integer
    return 1,0 
end
function main()
    local x : integer
    local ret: integer
    local concat : integer
    x, ret = concat("ahoj", "svete")
end
main()